<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generate.GenerateFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />


    <EditText
        android:id="@+id/imageWidthTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="500"
        android:hint="@string/widthEdTxt"

        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/colorCodeTW"
        app:layout_constraintEnd_toStartOf="@+id/imageHeightTextView"
        app:layout_constraintStart_toEndOf="@+id/colorCodeTW"
        app:layout_constraintTop_toTopOf="@+id/colorCodeTW"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/imageHeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="500"
        android:hint="@string/heightEdTxt"

        android:inputType="number"

        app:layout_constraintBottom_toBottomOf="@+id/imageWidthTextView"
        app:layout_constraintEnd_toStartOf="@+id/buttonGenerate"
        app:layout_constraintStart_toEndOf="@+id/imageWidthTextView"
        app:layout_constraintTop_toTopOf="@+id/imageWidthTextView"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/colorCodeTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_color_nTxtVw"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@id/currentColor"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

         />

    <ImageView
        android:id="@+id/currentColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintRight_toRightOf="@+id/colorCodeTW"
        app:layout_constraintLeft_toLeftOf="@id/colorCodeTW" />
    <Button

        android:id="@+id/buttonGenerate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/generateBtnText"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeightTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageHeightTextView"
        app:layout_constraintTop_toTopOf="@+id/imageHeightTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>